--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "sympy>=1.13.3",
+    "pandas>=1.3.4",
+    "matplotlib==3.9.3",
+]
